@@ -4,7 +4,7 @@ EXTRA_DIST = website img HACKING                             \
              tor-osx-dmg-creation.txt tor-rpm-creation.txt   \
              tor-win32-mingw-creation.txt
 
-man_MANS = tor.1 tor-resolve.1
+man_MANS = tor.1 tor-resolve.1 tor-gencert.1
 
 SUBDIRS = design-paper spec
 
